--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,37 @@
 buildscript {
     repositories {
+        mavenCentral()
         jcenter()
+        maven{url'https://repo1.maven.org/maven2/'}
+        //使用开源中国的maven库代替jcenter()
+        //阿里云的(速度飞快)：http://maven.aliyun.com/nexus/content/groups/public/
+        maven {
+            url 'http://maven.aliyun.com/nexus/content/groups/public'
+        }
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+        maven { url "https://jitpack.io" }
+        mavenLocal()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.3'
+        classpath 'com.android.tools.build:gradle:2.3.3'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
     }
 }
 
 allprojects {
     repositories {
+        mavenCentral()
         jcenter()
+        maven{url'https://repo1.maven.org/maven2/'}
+//        maven { url "https://maven.google.com"}
+        //使用开源中国的maven库代替jcenter()
+        //阿里云的(速度飞快)：http://maven.aliyun.com/nexus/content/groups/public/
+        maven {
+            url 'http://maven.aliyun.com/nexus/content/groups/public'
+        }
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         maven { url "https://jitpack.io" }
+        mavenLocal()
     }
 }
 
